--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,25 @@
   /* --background-end-rgb: 255, 255, 255; */
 }
 
+@layer components {
+  .card-label {
+    @apply text-very-dark-violet uppercase tracking-[0.125em]
+    leading-[0.925rem] text-xs;
+  }
+  .card-input {
+    @apply  border rounded-lg 
+    placeholder-very-dark-violet 
+    placeholder-opacity-25
+    h-[45px] py-[11px] px-4
+    mt-[9px]
+    text-lg leading-[1.44rem]
+    ;
+  }
+  .card-input:focus {
+    @apply outline-none;
+  }
+}
+
 /* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
